--- a/templates/contact_layout.html
+++ b/templates/contact_layout.html
@@ -14,33 +14,34 @@
         <div class="heading_container heading_center">
           <h2>Get In Touch</h2>
         </div>
-        <form action="">
+        <form action="{% url 'home:contact' %}" method="post">
+          {% csrf_token %}
           <div class="form-row">
             <div class="form-group col">
-              <input type="text" class="form-control" placeholder="Your Name" />
+              <input name="name" type="text" class="form-control" placeholder="Your Name" />
             </div>
           </div>
           <div class="form-row">
             <div class="form-group col-lg-6">
-              <input type="text" class="form-control" placeholder="Phone Number" />
+              <input type="text" name="phone_number" class="form-control" placeholder="Phone Number" />
             </div>
             <div class="form-group col-lg-6">
-              <select name="" id="" class="form-control wide">
+              <select name="service" id="" class="form-control wide">
                 <option value="">Select Service</option>
-                <option value="">Service 1</option>
-                <option value="">Service 2</option>
-                <option value="">Service 3</option>
+                {% for service in services %}
+                <option value="{{service.id}}">{{service.name}}</option>
+                {% endfor %}
               </select>
             </div>
           </div>
           <div class="form-row">
             <div class="form-group col">
-              <input type="email" class="form-control" placeholder="Email" />
+              <input type="email" class="form-control" name="email" placeholder="Email" />
             </div>
           </div>
           <div class="form-row">
             <div class="form-group col">
-              <input type="text" class="message-box form-control" placeholder="Message" />
+              <input type="text" name="message" class="message-box form-control" placeholder="Message" />
             </div>
           </div>
           <div class="btn_box">
