--- a/templates/header.html
+++ b/templates/header.html
@@ -3,36 +3,36 @@
         <div class="container-fluid header_top_container">
 
           <div class="contact_nav">
-            <a href="">
+            <a href="https://maps.app.goo.gl/Z3FwMEadPTmS4CCz7">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
                 Location
               </span>
             </a>
-            <a href="">
+            <a href="tel:+974-50-275-843">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 123455678990
+                Call : +974-50-275-843
               </span>
             </a>
-            <a href="">
+            <a href="mailto:rakhmonovnazarboy0@gmail.com">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                rakhmonovnazarboy0@gmail.com
               </span>
             </a>
           </div>
           <div class="social_box">
-            <a href="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
+            <a href="https://t.me/I_will_build_an_empire">
+              <i class="fa fa-telegram" aria-hidden="true"></i>
             </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
+            <a href="https://github.com/nazarboy2005/">
+              <i class="fa fa-github" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.linkedin.com/in/nazarboy-rakhmonov">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/nazarboy_raxmonov/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
