--- a/templates/service_layout.html
+++ b/templates/service_layout.html
@@ -6,8 +6,8 @@
           Our Services
         </h2>
         <p class="col-lg-8 px-0">
-          If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
-        </p>
+          We specialize in a range of professional welding services tailored to meet various needs. From enhancing the durability of machinery and home fixtures to ensuring the structural integrity of vehicles, our expert team delivers high-quality welding solutions you can rely on. With a focus on precision and longevity, we provide:
+          </p>
       </div>
       <div class="service_container">
         <div class="carousel-wrap ">
@@ -31,11 +31,6 @@
             {% endfor %}
           </div>
         </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          Read More
-        </a>
       </div>
     </div>
   </section>
