--- a/templates/index.html
+++ b/templates/index.html
@@ -1,126 +1,87 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-  <!-- service section -->
+<!-- service section -->
 
 {% include 'service_layout.html' %}
 
-  <!-- service section ends -->
+<!-- service section ends -->
 
-  <!-- about section -->
+<!-- about section -->
 {% include 'about_layout.html' %}
 
-  <!-- about section ends -->
+<!-- about section ends -->
 
-  <!-- team section -->
+<!-- team section -->
 
 {% include 'team_layout.html' %}
 
-  <!-- end team section -->
+<!-- end team section -->
 
-  <!-- contact section -->
+<!-- contact section -->
 {% include 'contact_layout.html' %}
-  <!-- end contact section -->
+<!-- end contact section -->
 
-  <!-- client section -->
-
-  <section class="client_section layout_padding">
+<!-- client section -->
+{% if testimonials %}
+<section class="client_section layout_padding">
     <div class="container ">
-      <div class="heading_container heading_center">
-        <h2>
-          Testimonial
-        </h2>
-        <hr>
-      </div>
-      <div id="carouselExample2Controls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="row">
-              <div class="col-lg-7 col-md-9 mx-auto">
-                <div class="client_container ">
-                  <div class="img-box">
-                    <img src="{% static 'images/client.jpg' %}" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <h5>
-                      Jone Mark
-                    </h5>
-                    <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-                    </p>
-                    <span>
-                      <i class="fa fa-quote-left" aria-hidden="true"></i>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-lg-7 col-md-9 mx-auto">
-                <div class="client_container ">
-                  <div class="img-box">
-                    <img src="{% static 'images/client.jpg' %}" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <h5>
-                      Jone Mark
-                    </h5>
-                    <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-                    </p>
-                    <span>
-                      <i class="fa fa-quote-left" aria-hidden="true"></i>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-lg-7 col-md-9 mx-auto">
-                <div class="client_container ">
-                  <div class="img-box">
-                    <img src="{% static 'images/client.jpg' %}" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <h5>
-                      Jone Mark
-                    </h5>
-                    <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-                    </p>
-                    <span>
-                      <i class="fa fa-quote-left" aria-hidden="true"></i>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="heading_container heading_center">
+            <h2>
+                Testimonial
+            </h2>
+            <hr>
         </div>
-        <div class="carousel_btn-box">
-          <a class="carousel-control-prev" href="#carouselExample2Controls" role="button" data-slide="prev">
+        <div id="carouselExample2Controls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                {% for testimonial in testimonials %}
+                <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-9 mx-auto">
+                            <div class="client_container ">
+                                <div class="img-box">
+                                    <img src="{{testimonial.image.url}}" alt="">
+                                </div>
+                                <div class="detail-box">
+                                    <h5>
+                                        {{testimonial.name}}
+                                    </h5>
+                                    <p>
+                                        {{testimonial.message}}
+                                    </p>
+                                    <span>
+                      <i class="fa fa-quote-left" aria-hidden="true"></i>
+                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            {% if testimonials|length > 1 %}
+            <div class="carousel_btn-box">
+                <a class="carousel-control-prev" href="#carouselExample2Controls" role="button" data-slide="prev">
             <span>
               <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExample2Controls" role="button" data-slide="next">
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExample2Controls" role="button" data-slide="next">
             <span>
               <i class="fa fa-arrow-right" aria-hidden="true"></i>
             </span>
-            <span class="sr-only">Next</span>
-          </a>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            {% endif %}
         </div>
-      </div>
     </div>
-  </section>
+</section>
+{% endif %}
 
-  <!-- end client section -->
+<!-- end client section -->
 
 
-  <!-- end info_section -->
+<!-- end info_section -->
 {% endblock %}
