only subscription to emails left

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,32 +9,32 @@
           </div>
           <div class="col-md-5 ">
             <div class="info_contact">
-              <a href="">
+              <a href="https://maps.app.goo.gl/Z3FwMEadPTmS4CCz7">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
                   Location
                 </span>
               </a>
-              <a href="">
+              <a href="tel:+974-50-275-843">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  +01 1234567890
+                  +974-50-275-843
                 </span>
               </a>
             </div>
           </div>
           <div class="col-md-4 ">
             <div class="social_box">
-              <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
+              <a href="https://t.me/I_will_build_an_empire">
+                <i class="fa fa-telegram" aria-hidden="true"></i>
               </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
+              <a href="https://github.com/nazarboy2005/">
+                <i class="fa fa-github" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="https://www.linkedin.com/in/nazarboy-rakhmonov">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="https://www.instagram.com/nazarboy_raxmonov/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
@@ -49,10 +49,7 @@
                 Company
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
-              </p>
+FINTER delivers expert welding services for cars, homes, machinery, and motorcycles. We prioritize quality, precision, and customer satisfaction for reliable, lasting results.              </p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
@@ -74,10 +71,7 @@
                 Services
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
-              </p>
+From repairs to custom fabrication, our services cover all welding needs for vehicles, homes, and machinery with a focus on precision and efficiency.              </p>
             </div>
           </div>
           <div class="col-lg-2 col-md-6">
@@ -125,8 +119,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved By Nazarboy Rakhmonov
       </p>
     </div>
   </footer>
