everything is ready

--- a/templates/contact_layout.html
+++ b/templates/contact_layout.html
@@ -52,7 +52,7 @@
                         </div>
 
                     </div>
-                    <form action="{% url 'home:contact' %}" method="post">
+                    <form action="{% url 'home:contact' %}?next={{request.get_full_path|urlencode}}" method="post">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="form-group col">
