everything is ready

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -120,7 +120,8 @@ From repairs to custom fabrication, our services cover all welding needs for veh
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By Nazarboy Rakhmonov
+        &copy; <span id="displayYear"></span> All Rights Reserved By
+        <a href="https://www.linkedin.com/in/nazarboy-rakhmonov">Nazarboy Rakhmonov</a>
       </p>
     </div>
   </footer>
