--- a/templates/team_layout.html
+++ b/templates/team_layout.html
@@ -7,8 +7,7 @@
           Our Team
         </h2>
         <p>
-          Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam nulla mauris
-          iaculis. Erat eget vitae malesuada, tortor tincidunt porta lorem lectus.
+          At Finter, our skilled professionals specialize in car, home, machine, and moto welding. Dedicated to quality and precision, we bring your projects to life with reliability and expertise you can trust.
         </p>
       </div>
       <div class="row">
